# oxroot

./: Cargo.toml  LICENSE  README.md
crates/oxiroot/: Cargo.toml
crates/oxiroot-compress/: Cargo.toml
crates/oxiroot-compress/src/: codec.rs  header.rs  lib.rs
crates/oxiroot-hist/: Cargo.toml
crates/oxiroot-hist/src/: axis.rs  base.rs  lib.rs  th1.rs  th2.rs  th3.rs  tprofile.rs  write.rs
crates/oxiroot-hist/tests/: dirs.rs  ops.rs  read_family.rs  read_integer.rs  read_th1d.rs  read_th2d.rs  sumw2_varbins.rs  update.rs  write_multi.rs  write_th1d.rs  write_th2d.rs  write_th3d.rs  write_tprofile.rs
crates/oxiroot-io-core/: Cargo.toml
crates/oxiroot-io-core/src/: lib.rs
crates/oxiroot-io-core/src/buffer/: mod.rs  reader.rs
crates/oxiroot-io-core/src/file/: directory.rs  rfile.rs  writer.rs
crates/oxiroot-io-core/tests/: read_fixture.rs  read_streamers.rs
crates/oxiroot-rntuple/: Cargo.toml
crates/oxiroot-rntuple/src/: anchor.rs  column.rs  envelope.rs  field.rs  footer.rs  header.rs  lib.rs  page.rs  pagelist.rs  reader.rs  writer.rs
crates/oxiroot-rntuple/tests/: read_anchor.rs  read_fields.rs  read_values.rs  stream_write.rs  write_rntuple.rs
crates/oxiroot/examples/: analysis.rs
crates/oxiroot/src/: lib.rs
crates/oxroot/: Cargo.toml
crates/oxroot-compress/: Cargo.toml
crates/oxroot-hist/: Cargo.toml
crates/oxroot-hist/src/: axis.rs  base.rs  lib.rs  ops.rs  th1.rs  th2.rs  th3.rs  tprofile.rs  write.rs
crates/oxroot-hist/tests/: dirs.rs  ops.rs  read_family.rs  read_integer.rs  read_th1d.rs  read_th2d.rs  sumw2_varbins.rs  update.rs  write_multi.rs  write_th1d.rs  write_th2d.rs  write_th3d.rs  write_tprofile.rs
crates/oxroot-io-core/: Cargo.toml
crates/oxroot-io-core/src/: compression.rs  error.rs  lib.rs  streamer_info.rs
crates/oxroot-io-core/src/buffer/: writer.rs
crates/oxroot-io-core/src/file/: free.rs  header.rs  key.rs  mod.rs  rfile.rs  writer.rs
crates/oxroot-io-core/tests/: read_fixture.rs  read_streamers.rs
crates/oxroot-rntuple/: Cargo.toml
crates/oxroot-rntuple/src/: anchor.rs  column.rs  envelope.rs  field.rs  footer.rs  header.rs  lib.rs  page.rs  pagelist.rs  reader.rs  writer.rs
crates/oxroot-rntuple/tests/: read_anchor.rs  read_fields.rs  read_values.rs  stream_write.rs  write_rntuple.rs
crates/oxroot/examples/: analysis.rs
crates/oxroot/src/: lib.rs
crates/root-hist/src/: axis.rs  base.rs  lib.rs  th1.rs  th2.rs  th3.rs  tprofile.rs  write.rs
crates/root-hist/tests/: dirs.rs  ops.rs  sumw2_varbins.rs  update.rs  write_multi.rs  write_th1d.rs  write_th2d.rs  write_th3d.rs  write_tprofile.rs
crates/root-io-core/src/: lib.rs  streamer.rs
crates/root-io-core/src/file/: mod.rs  rfile.rs  writer.rs
crates/root-rntuple/src/: field.rs  lib.rs  page.rs  reader.rs  writer.rs
crates/root-rntuple/tests/: read_fields.rs  read_values.rs  write_rntuple.rs
fixtures/: rntuple_scalars_uncompressed.root  rntuple_scalars_zstd.root
scripts/: gen_rntuple_fixtures.cpp
