[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mathieuouillon/oxroot"

[workspace.dependencies]
oxroot-io-core = { path = "crates/oxroot-io-core" }
oxroot-compress = { path = "crates/oxroot-compress" }
oxroot-rntuple = { path = "crates/oxroot-rntuple" }
oxroot-hist = { path = "crates/oxroot-hist" }

[profile.release]
opt-level = 3
lto = "thin"
