[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/mathieuouillon/oxiroot"

[workspace.dependencies]
oxiroot-io-core = { path = "crates/oxiroot-io-core" }
oxiroot-compress = { path = "crates/oxiroot-compress" }
oxiroot-rntuple = { path = "crates/oxiroot-rntuple" }
oxiroot-hist = { path = "crates/oxiroot-hist" }

[profile.release]
opt-level = 3
lto = "thin"
