[package]
name = "oxroot-hist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Classic ROOT histograms (TH1/TH2/TH3/TProfile) read/write"

[dependencies]
oxroot-io-core = { workspace = true }
oxroot-compress = { workspace = true }
